--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 *.class
-
+*.ctxt
+package.bluej
+.DS_Store
+#If you are reading this comment you are obviously very bored because who reads this?!?!?!?!
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
